clusters/west-wa-davidcag-1001/dogs-cats/dogs-cats/ingressHttps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dogs-cats
  namespace: dogs-cats
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"

spec:
  tls:
  - secretName: dogs-cats
    hosts:
    - 20.169.0.210
  rules:
  - host: 20.169.0.210
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: dogs-cats
            port:
              number: 8080
